# playferrous

./: .env  .gitignore  Cargo.toml  playferrous.toml
games/: Cargo.toml
games/rock-paper-scissors/: Cargo.toml
games/rock-paper-scissors/src/: main.rs
launcher/: Cargo.toml
launcher/src/: lib.rs
presentation/: Cargo.toml
presentation-ssh/: Cargo.toml
presentation-ssh/src/: client.rs  data_reader.rs  data_writer.rs  error.rs  handler.rs  lib.rs  null_buf.rs
presentation/src/: actor.rs  bichannel.rs  lib.rs  terminal.rs
presentation/src/terminal/: ui.toml
process-launcher/: Cargo.toml
process-launcher/src/: lib.rs
server/: Cargo.toml
server/migrations/: 20230611112827_init.down.sql  20230611112827_init.up.sql  20230625151137_add_session.down.sql  20230625151137_add_session.up.sql  20230730222018_add_visibility_functions.down.sql  20230730222018_add_visibility_functions.up.sql
server/src/: active_session.rs  connection_manager.rs  database.rs  game_manager.rs  launchers.rs  main.rs  presentations.rs  proposal_manager.rs  terminal_session.rs  user_management.rs  utils.rs
server/src/database/: message.rs  proposal.rs  request.rs  session.rs  transaction.rs  user.rs
server/src/terminal_session/: ui.rs  ui.toml
types/: Cargo.toml
types/src/: lib.rs  process.rs
