[package]
name = "playferrous-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
ijson = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
