[package]
name = "playferrous-presentation-ssh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
russh = { version = "0.37.1", features = ["openssl"] }
russh-keys = "0.37.1"
playferrous-presentation = { path = "../presentation" }
serde = "1.0"
async-trait = "0.1.68"
thiserror = "1.0"
noline = { version = "0.2.0", features = ["std", "tokio"] }
tokio = { version = "1.0", features = ["sync", "fs"] }
bytes = "1.0"
anyhow = "1.0"
futures = "0.3"
tracing = "0.1"
