[package]
name = "playferrous-presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync"] }
sqlx = "0.6"
