[package]
name = "playferrous-process-launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playferrous-launcher = { path = "../launcher" }
playferrous-types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync", "fs"] }
ijson = "0.1.0"
serde_json = "1.0"
