[package]
name = "playferrous-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playferrous-presentation-ssh = { path = "../presentation-ssh" }
playferrous-presentation = { path = "../presentation" }
tokio = "1.0"
anyhow = "1.0"
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
dotenv = "0.15.0"
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
thiserror = "1.0"
futures = "0.3"
