[package]
name = "playferrous-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playferrous-presentation-ssh = { path = "../presentation-ssh" }
playferrous-presentation = { path = "../presentation" }
playferrous-launcher = { path = "../launcher" }
playferrous-process-launcher = { path = "../process-launcher" }
tokio = "1.0"
anyhow = "1.0"
async-trait = "0.1.68"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
dotenv = "0.15.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
] }
thiserror = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
aerosol = { version = "1.0.0-alpha.4", path = "../../aerosol", features = [
    "async",
] }
ijson = "0.1.3"
chrono = "0.4"
