[package]
name = "playferrous-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
process = ["anyhow", "serde_json", "log", "pretty_env_logger"]

[dependencies]
ijson = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
