[package]
name = "playferrous-rock-paper-scissors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
playferrous-types = { path = "../../types", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
